--- a/locales/en.yml
+++ b/locales/en.yml
@@ -33,5 +33,5 @@ en:
         PowerShell encountered an error, this can be due to environment / configuration
         related. Please see the error message and report the issue if you feel it is
         related to the provider
-
+        %{path}
         %{stderr}
