--- a/locales/en.yml
+++ b/locales/en.yml
@@ -10,6 +10,6 @@ en:
         SSH is available for non windows guest. Vagrant detected guest to be %{guest}
       rdp_not_available: |-
         RDP is available for windows guest. Vagrant detected guest to be %{guest}
-      win_rm_not_ready: |-
+      win_rm_not_available: |-
         WinRM is not enabled in the remot guest. Vagrant-Windows-HyperV uses remote PowerShell scripts
         to communicate to the remote machine. Please check the same and try again.
